--- a/hyy/package.json
+++ b/hyy/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "better-scroll": "^1.15.2",
     "core-js": "^2.6.5",
+    "dayjs": "^1.8.15",
     "lib-flexible": "^0.3.2",
     "postcss-px2rem-exclude": "0.0.6",
     "qs": "^6.7.0",
